--- a/index.html
+++ b/index.html
@@ -144,9 +144,12 @@
         <div class="intro__banner">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"  aria-label="Slide 2"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
+              <button style="border-radius:50%; width:10px; height:8px; background-color:#fff;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"  aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -196,7 +199,7 @@
             <a href="#">Поиск по марке</a>
           </div>
           <div class="search__menu_link">
-            <a href="#">Поиск по марке</a>
+            <a href="#">Поиск по названию товара</a>
           </div>
         </div>
         <form action method="get" class="search__form">
@@ -215,51 +218,296 @@
           </div>
           <div class="search__catalog_item">
             <div>
-              <h4>Квадроциклы</h4>
+              <h4>Гидроциклы</h4>
               <a href="#">Подробее <img src="/images/icons/right-arrow-icon.svg" alt="icon"></a>
             </div>
             <div>
-              <img src="/images/vehicle1.png" alt="vehicle img">
+              <img src="/images/vehicle2.png" alt="vehicle img">
             </div>
           </div>
           <div class="search__catalog_item">
             <div>
-              <h4>Квадроциклы</h4>
+              <h4>Катера</h4>
               <a href="#">Подробее <img src="/images/icons/right-arrow-icon.svg" alt="icon"></a>
             </div>
             <div>
-              <img src="/images/vehicle1.png" alt="vehicle img">
+              <img src="/images/vehicle3.png" alt="vehicle img">
             </div>
           </div>
           <div class="search__catalog_item">
             <div>
-              <h4>Квадроциклы</h4>
+              <h4>Снегоходы</h4>
               <a href="#">Подробее <img src="/images/icons/right-arrow-icon.svg" alt="icon"></a>
             </div>
             <div>
-              <img src="/images/vehicle1.png" alt="vehicle img">
+              <img src="/images/vehicle4.png" alt="vehicle img">
             </div>
           </div>
           <div class="search__catalog_item">
             <div>
-              <h4>Квадроциклы</h4>
+              <h4>Вездеходы</h4>
               <a href="#">Подробее <img src="/images/icons/right-arrow-icon.svg" alt="icon"></a>
             </div>
             <div>
-              <img src="/images/vehicle1.png" alt="vehicle img">
+              <img src="/images/vehicle5.png" alt="vehicle img">
             </div>
           </div>
           <div class="search__catalog_item">
             <div>
-              <h4>Квадроциклы</h4>
+              <h4>Двигатели</h4>
               <a href="#">Подробее <img src="/images/icons/right-arrow-icon.svg" alt="icon"></a>
             </div>
             <div>
-              <img src="/images/vehicle1.png" alt="vehicle img">
+              <img src="/images/vehicle6.png" alt="vehicle img">
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="popular">
+      <div class="container-1">
+        <h3 class="popular__title">Популярные товары</h3>
+        <div class="popular__menu">
+          <div class="popular__menu_link link-active">
+            <a href="#">запчасти</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">моторы</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">шины </a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">электроника</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">инструменты </a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">аксессуары </a>
+          </div>
+        </div>
+        <div class="popular__catalog">
+          <div class="arrow-left">
+            <a href="#"><img src="/images/icons/arrow-left-icon.png" alt="arrow left"></a>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/p1.png" alt="bag img">
+            <p>Водонепроницаемый
+              Рюкзак</p>
+              <h4>9 800 ₽</h4>
+              <div class="shop-cart">
+                <img src="/images/icons/white-shop-icon.png" alt="shop icon">
+              </div>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="sales-mark"><h5>SALE</h5></div>
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/p2.png" alt="bag img">
+            <p>Водонепроницаемый
+              Рюкзак</p>
+              <h4>9 800 ₽</h4>
+              <div class="shop-cart">
+                <img src="/images/icons/white-shop-icon.png" alt="shop icon">
+              </div>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/p3.png" alt="bag img">
+            <p>Водонепроницаемый
+              Рюкзак</p>
+              <h4>9 800 ₽</h4>
+              <div class="shop-cart">
+                <img src="/images/icons/white-shop-icon.png" alt="shop icon">
+              </div>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="sales-mark"><h5>SALE</h5></div>
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/p4.png" alt="bag img">
+            <p>Водонепроницаемый
+              Рюкзак</p>
+              <h5>нет в наличии</h5>
+              <a href="#">Сообщить о поступлении</a>
+          </div>
+          <div class="arrow-right">
+            <a href="#"><img src="/images/icons/arrow-right-icon.png" alt="arrow left"></a>
+          </div>
+        </div>
+      </div>
+      <div class="dots">
+        <div class="dots__dot dot-active"></div>
+        <div class="dots__dot"></div>
+        <div class="dots__dot"></div>
+      </div>
+      <button class="popular__btn">Показать еще</button>
+    </div>
+    <div class="sale-banner">
+      <div class="container-1">
+        <div class="sale-banner__list">
+          <div class="sale-banner__list_item order1">
+            <img srcset="/images/vehicile-1.png" src="/images/vehicile-1.png" alt="vehicle img">
+          </div>
+          <div class="sale-banner__list_item order2">
+            <img src="/images/vehicle-2.png" alt="vehicle img">
+          </div>
+          <div class="sale-banner__list_item order3">
+            <h3>CКИДКИ 
+              на все запчасти 
+              до 70%</h3>
+          </div>
+          <div class="sale-banner__list_item order4">
+            <button>ПОСМОТЕТЬ ВСЕ</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="popular">
+      <div class="container-1">
+        <h3 class="popular__title">С этим товаром покупают</h3>
+        <div class="popular__menu">
+          <div class="popular__menu_link">
+            <a href="#">запчасти</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">моторы</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">шины </a>
+          </div>
+          <div class="popular__menu_link link-active">
+            <a href="#">электроника</a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">инструменты </a>
+          </div>
+          <div class="popular__menu_link">
+            <a href="#">аксессуары </a>
+          </div>
+        </div>
+        <div class="popular__catalog">
+          <div class="arrow-left">
+            <a href="#"><img src="/images/icons/arrow-left-icon.png" alt="arrow left"></a>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="sales-mark"><h5>SALE</h5></div>
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/el1.png" alt="bag img">
+            <p>BRP Audio-портативная система</p>
+              <h5>нет в наличии</h5>
+              <a href="#">Сообщить о поступлении</a>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/el2.png" alt="bag img">
+            <p>Garmin Echomap Plus 62cv</p>
+              <h4>9 800 ₽</h4>
+              <div class="shop-cart">
+                <img src="/images/icons/white-shop-icon.png" alt="shop icon">
+              </div>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="sales-mark"><h5>SALE</h5></div>
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/el3.png" alt="bag img">
+            <p>RF D.E.S.S.TM <br> Key</p>
+              <h5>нет в наличии</h5>
+              <a href="#">Сообщить о поступлении</a>
+          </div>
+          <div class="popular__catalog_item">
+            <div class="hover-text">
+              <a href="#">посмотреть товар</a>
+            </div>
+            <div class="heart-icon">
+              <img src="/images/icons/heart-icon.svg" alt="heart icon">
+            </div>
+            <img src="/images/el4.png" alt="bag img">
+            <p>Мужской костюм
+              3мм</p>
+              <h4>7 000 ₽</h4>
+          </div>
+          <div class="arrow-right">
+            <a href="#"><img src="/images/icons/arrow-right-icon.png" alt="arrow left"></a>
+          </div>
+        </div>
+      </div>
+      <div class="dots">
+        <div class="dots__dot dot-active"></div>
+        <div class="dots__dot"></div>
+        <div class="dots__dot"></div>
+      </div>
+      <button class="popular__btn el-btn">Показать еще</button>
+    </div>
+    <footer>
+      <div class="footer-list container-1">
+        <div class="footer-list__item">
+          <p>Подпишитесь на нашу рассылку 
+            и узнавайте о акция быстрее</p>
+            <form action>
+              <input class="form-mail" type="email" placeholder="Введите ваш e-mail:">
+              <input class="form-btn" type="submit" value="Отправить">
+            </form>
+        </div>
+        <div class="footer-list__item">
+          <p class="footer-list__item_title">Информация</p>
+            <a href="#"> О компании</a>
+            <a href=""> Контакты</a>
+            <a href="#">Акции</a>
+            <a href="#">Магазины</a>
+        </div>
+        <div class="footer-list__item">
+          <p class="footer-list__item_title">Интернет-магазин</p>
+            <a href="#"> Доставка и самовывоз</a>
+            <a href=""> Оплата</a>
+            <a href="#"> Возврат-обмен</a>
+            <a href="#">Новости</a>
+        </div>
+        <div class="footer-list__item">
+            <a href="#"><img src="/images/icons/instagram-icon.svg" alt=""></a>
+            <a href=""><img src="/images/icons/vk-icon.svg" alt=""></a>
+            <a href="#"> <img src="/images/icons/facebook-icon.svg" alt=""></a>
+            <a href="#"><img src="/images/icons/youtube-icon.svg" alt=""></a>
+        </div>  
+      </div>
+      <div class="footer-bottom">
+        <p><a href="#">Договор оферты</a> <a href="#">Политика обработки персональных данных</a></p>
+      </div>
+    </footer>
     </body>
 </html>
